# 2019-DAT109-Modelldrevet-utvikling-01

Bookstore1/Model/DataModel/: Properties.wr
Bookstore1/Model/WebModel/sv1/: page1.wr  page2.wr  page3.wr
Bookstore1/Model/WebModel/sv2/: Properties.wr  page4.wr  page5.wr
EXPO/: feilforklaring
EXPO/Model/DataModel/: Properties.wr
EXPO/Model/WebModel/sv1/: Properties.wr  page1.wr  page2.wr  page3.wr  page4.wr
EXPO/Model/WebModel/sv2/: Properties.wr  page5.wr  page6.wr  page7.wr
EXPO/Model/WebModel/sv3/: Properties.wr  page10.wr  page8.wr  page9.wr
Umple/: Diskuter Umple
Umple/DomeneModell/C++/: CMakeLists.txt  model_Main.cpp  model_Model.h
Umple/DomeneModell/Java/: Admin.java  DBHandler.java  JavaEmail.java  Login.java  LoginUtil.java  RegistrerStand.java  Result.java  Servlet.java  Stand.java  StandAdmin.java  StandInfo.java  StandOverview.java  Vote.java
Umple/DomeneModell/Php/: Admin.php  DBHandler.php  JavaEmail.php  Login.php  LoginUtil.php  RegistrerStand.php  Result.php  Servlet.php  Stand.php  StandAdmin.php  StandInfo.php  StandOverview.php  Vote.php
Umple/TilstandModell/Admin/Java/: Login.java
Umple/TilstandModell/Admin/Php/: Login.php
Umple/TilstandModell/Admin/RTCpp/: CMakeLists.txt  model_Main.cpp  model_Model.h
Umple/TilstandModell/Brukere/Java/: LoginQRCode.java
Umple/TilstandModell/Brukere/Php/: LoginQRCode.php
Umple/TilstandModell/Brukere/RTCpp/: CMakeLists.txt  model_Main.cpp  model_Model.h
